data/config.yaml:Fix Secondary GitHub link again

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Michael S.
+name: Michael
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -23,14 +23,14 @@ description:
 page_title:
   "🪴 Michael's Musings"
 links:
-  - link_name: Home
+  - link_name: About Me
     link: https://michael.smolkin.org/
   - link_name: Twitter
     link: https://twitter.com/MichaelSmolkin
   - link_name: GitHub
     link: https://github.com/msmolkin
   - link_name: Secondary GitHub
-  - https://github.com/msmolkin1
+    link: https://github.com/msmolkin1
   - link_name: About
     link: https://michael.smolkin.org/
 
