Testing front-matter

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -23,13 +23,11 @@ description:
 page_title:
   "🪴 Michael's Musings"
 links:
-  - link_name: About Me
-    link: https://michael.smolkin.org/
   - link_name: Twitter
     link: https://twitter.com/MichaelSmolkin
   - link_name: GitHub
     link: https://github.com/msmolkin
-  - link_name: Secondary GitHub
+  - link_name: GH2
     link: https://github.com/msmolkin1
   - link_name: About
     link: https://michael.smolkin.org/
