add daily notes 2023-07-30

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Michael
+name: M
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -21,7 +21,7 @@ search:
 description:
   Hey, you! Please remind me to update this description. Yes, you. Welcome to my website! Please bear with me as I gather more public data that I'm comfortable sharing with Anthropic. Stay tuned for updates and a comprehensive description (written by Claude) soon!
 page_title:
-  "🧠 Michael's Musings"
+  "🧠 M's Musings"
 links:
   - link_name: X
     link: https://twitter.com/MichaelSmolkin
