add daily notes 2023-07-30

--- a/config.toml
+++ b/config.toml
@@ -31,3 +31,6 @@ enableGitInfo = true
         publishDate = ["publishDate", "date"]
     [markup.goldmark.renderer]
         unsafe = true
+[taxonomies]
+    category = "categories"
+    tag = "tags"
